--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "barberia de wazcar",
   "main": "index.js",
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Cgrs Scripts",
